--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <okky.repo.url>s3://okky-mvn-repo</okky.repo.url>
         <lombok.version>1.16.20</lombok.version>
         <gson.version>2.8.2</gson.version>
     </properties>
@@ -48,11 +47,24 @@
             <distributionManagement>
                 <repository>
                     <id>okky-release</id>
-                    <url>${okky.repo.url}/prod/release</url>
+                    <url>s3://okky-mvn-repo/prod/release</url>
                 </repository>
                 <snapshotRepository>
                     <id>okky-snapshot</id>
-                    <url>${okky.repo.url}/prod/snapshot</url>
+                    <url>s3://okky-mvn-repo/prod/snapshot</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>stg</id>
+            <distributionManagement>
+                <repository>
+                    <id>okky-release</id>
+                    <url>s3://okky-mvn-repo-stg/release</url>
+                </repository>
+                <snapshotRepository>
+                    <id>okky-snapshot</id>
+                    <url>s3://okky-mvn-repo-stg/snapshot</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
