build 시 sonarscanner 적용
- sonar 토큰은 parameter store에서 읽어도록 설정.

--- a/integration/stg/buildspec.yml
+++ b/integration/stg/buildspec.yml
@@ -1,9 +1,14 @@
 version: 0.2
 
+env:
+  parameter-store:
+    SONAR_LOGIN: "/okky/codebuild/sonar.login"
+
 phases:
   build:
     commands:
-      - mvn clean deploy -P stg
+      - aws s3 cp s3://config-okky-stg/settings.xml /root/.m2/settings.xml
+      - mvn clean deploy sonar:sonar -P stg -Dsonar.login=$SONAR_LOGIN
 
 artifacts:
   files:
