build 시 sonarscanner 적용
- projectKey를 별도 설정으로 분리.

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>okky-share-event</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <properties>
+        <sonar.projectKey>okky-share-event</sonar.projectKey>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.okky.share</groupId>
