운영환경 buildpsec에 settings.xml을 다운로드하는 코드 추가

--- a/integration/prod/buildspec.yml
+++ b/integration/prod/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
+      - aws s3 cp s3://okky-config/settings.xml /root/.m2/settings.xml
       - mvn clean deploy -P prod
 
 artifacts:
